[package]
name = "chat-rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
shuttle-rocket = "0.46.0"
shuttle-runtime = "0.46.0"
rocket_cors = "0.6.0"
uuid = { version = "1.4", features = ["v4"] }
dotenv = "0.15.0"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
rand = "0.8"